# hse_dsa

./: .gitignore  CNAME  README.md  app.endpoints.html  app.html  cli.html  client.html  csr.html  genindex.html  hseclient.app.html  hseclient.content.html  hseclient.html  hsecrypto.dsa.html  hsecrypto.hash.html  hsecrypto.html  hsecrypto.lib.html  hseserver.app.html  hseserver.html  hseserver.utils.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  server.app.endpoints.html  server.app.html  server.hsedsa-backend.html  server.html  server.tests.html  server.utils.html  sign.html  tests.html  utils.html
_modules/: index.html
client/: README.md  cli.py  csr.py  file.py  generate.py  pyproject.toml  req.py  sign.py
client/hseclient/: cli.py  client.sqlite  csr.py
client/hseclient/content/: __init__.py  api.py  cglobal.py  cprint.py  crypt.py  database.py  fn.py  json_data.py
client/hseclient/data/: cert.json  keys.json  phone_number.json  root_pubkey.json  token.json
client/hseclient/keys/: host.json  registration_data.json
client/keys/: csr.json  private_key.pem  public_key.pem
client/tests/: tests.py
server/: .env  Dockerfile  README.md  database.sql  docker-compose.yaml  mysql.sql  mysql_start.sh  nginx.conf  pyproject.toml  requirements.txt
server/app/: database.py  main.py  telegram_gateway.py  test_main.py
server/app/endpoints/: auth.py  docs.py  login.py  revoke.py  root.py  tests.py
server/app/tests/: test_main.py
server/crypto/: build.sh
server/crypto/hsecrypto/dsa/: gost_dsa.py
server/crypto/tests/: test_dsa.py
server/hsedsa-backend/: __init__.py
server/hseserver/: database.sql
server/hseserver/app/: database.py  greensms.py  main.py  telegram_gateway.py
server/hseserver/tests/: test_main.py
server/hseserver/utils/: csr.py  file.py  sign.py
server/tests/: test_main.py
server/utils/: csr.py  file.py  sign.py  test.txt
(+75 files in other folders)
