[tool.poetry]
name = "hseclient"
version = "0.1.0"
description = "client_side for docshub"
authors = ["Ensi0n <komp.val2404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tabulate = "^0.9.0"
hsecrypto = {url = "https://github.com/DjamikTea/hse_dsa/releases/download/0.2.1/hsecrypto-0.2.1-py3-none-any.whl"}
pytest = "^8.3.4"
colorama = "^0.4.6"
tqdm = "^4.67.1"
alive-progress = "^3.2.0"
aiohttp = "^3.11.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
client = "hseclient.cli:run"