[tool.poetry]
name = "hsedsa-backend"
version = "0.1.0"
description = ""
authors = ["djamik <jamal.abakaroff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
aiohttp = "^3.11.9"
httpx = "^0.28.0"
mysql-connector-python = "^9.1.0"
uvicorn = "^0.32.1"
hsecrypto = {url = "https://github.com/DjamikTea/hse_dsa/releases/download/0.2.1/hsecrypto-0.2.1-py3-none-any.whl"}
aioresponses = "^0.7.7"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.8"
python-multipart = "^0.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
